Change RecyclerView in response to fling hitting edges (top / down)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:padding="4dp"
-        android:id="@+id/list"
+        android:id="@+id/recyclerview_main_activity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
